fixed compatibility issue on firefox!

--- a/_sass/_photosphere.scss
+++ b/_sass/_photosphere.scss
@@ -6,7 +6,7 @@
 }
 
 canvas {
-    cursor: url('{{site.baseurl}}/images/all-scrollCursor.png'), all-scroll;
+    cursor: url('{{site.baseurl}}/images/all-scrollCursor.png'), move;
 }
 
 #photosphere-background img {
