--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -9,8 +9,6 @@ div#main-container {
 }
 
 .website_tile {
-    justify-content: center;
-    align-items: center;
     width: 350px;
     margin: 0 6px;
     display: flex;
